# nova-network-failure-prediction

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: data.yaml  simulate.yaml  train_supervised.yaml  train_unsupervised.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: 00_download_datasets.py  01_ingest.py  02_build_dataset.py  03_correlate_patterns.py  04_train_supervised.py  05_train_unsupervised.py  06_evaluate.py  07_infer.py  08_simulate_failures.py
src/nova/common/: __init__.py  io.py  logging.py  seed.py
src/nova/evaluation/: __init__.py  metrics.py  plots.py
src/nova/features/: __init__.py  label.py  stats.py  windows.py
src/nova/ingest/: __init__.py  flows.py  geospatial.py  syslog.py  telemetry.py
src/nova/models/: __init__.py  autoencoder.py  losses.py  supervised.py
src/nova/simulate/: __init__.py  local_simulator.py  twin_interface.py
src/nova/training/: __init__.py  datamodule.py  train_supervised.py  train_unsupervised.py
tests/: test_feature_windows.py  test_models_forward.py  test_parsers.py
